版本细节修改